--- a/index.html
+++ b/index.html
@@ -10,6 +10,85 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="illustration of a watering can">
+            </div>
+            <div class="links">
+                <a href="#top">Home</a>
+                <a href="#about">About</a>
+                <a href="#shop">Plants</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </nav>
+    </header>
+    <section id="top">
+        <div class="titles">
+            <h1>The Watering Can</h1>
+            <button>Shop Our Indoor Plant Sale</button>
+        </div>
+    </section>
+    <section id="about">
+        <div class="txt">
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur architecto eum, quasi dignissimos totam natus. Nisi exercitationem sapiente quia soluta non sunt quas earum facilis animi placeat sed, quisquam veniam.</p>
+        </div>
+    </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="container"><!--big div that wraps around little boxes-->
+            <div class="bgimg">
+                <!-- empty image -->
+            </div>
+            <div class="shoptxt succulents">
+                <div>
+                    <h3>Succulents</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, non. Nam, id nobis quidem at illo fuga deserunt in? Quisquam consectetur qui, asperiores quam sequi illo provident numquam minima rem.</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+            <div class="shoptxt">
+                <div>
+                    <h3>Cacti</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum earum modi cupiditate eaque vero facere! Dignissimos aperiam earum nisi quisquam, distinctio error culpa officiis et tempore laudantium. Tempore, corrupti iste!</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+            <div class="bgimg cacti">
+                <!-- empty image -->
+            </div>
+            <div class="bgimg tropicals">
+                <!-- empty image -->
+            </div>
+            <div class="shoptxt">
+                <div>
+                    <h3>Tropicals</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id magnam sed fugit, dolor ducimus, nisi accusantium perspiciatis molestiae earum quos adipisci omnis impedit similique labore, commodi mollitia? Nihil, quod. Facilis.</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+        </div><!--closes big div-->
+    </section>
+    <footer id="contact">
+        <h2>Get In Touch</h2>
+        <div class="left">
+            <div>
+                <h3>Find Us Here:</h3>
+                <address>123 Plant Lane<br>
+                Boomfield Ontario<br>
+            Canada, L2G 0x6</address>
+            <a href="tel:1-613-978-8282">613-978-8282</a><br>
+            <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
+            <p>@thewateringcan on the socials</p>
+            </div>
+        </div>
+        <div class="right">
+            <img src="images/shop.jpg" alt="image of shop space inside of the watering can">
+        </div>
+        <div class="bottom">
+            <p>Copyright 2021</p>
+        </div>
+    </footer>
 </body>
 </html>
