finsihed media queries for 800px and 500px

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Add Google Fonts here-->
-
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
     <!--Link your stylesheet here-->
-
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -38,30 +38,32 @@
     <section id="shop">
         <h2>Our Plants</h2>
         <div class="container"><!--big div that wraps around little boxes-->
-            <div class="bgimg">
+            <div class="bgimg succulents one">
                 <!-- empty image -->
             </div>
-            <div class="shoptxt succulents">
+            <div class="shoptxt two">
                 <div>
                     <h3>Succulents</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, non. Nam, id nobis quidem at illo fuga deserunt in? Quisquam consectetur qui, asperiores quam sequi illo provident numquam minima rem.</p>
                     <button>Shop Now!</button>
                 </div>
             </div>
-            <div class="shoptxt">
+            <!-- split -->
+            <div class="shoptxt three">
                 <div>
                     <h3>Cacti</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum earum modi cupiditate eaque vero facere! Dignissimos aperiam earum nisi quisquam, distinctio error culpa officiis et tempore laudantium. Tempore, corrupti iste!</p>
                     <button>Shop Now!</button>
                 </div>
             </div>
-            <div class="bgimg cacti">
+            <div class="bgimg cacti four">
                 <!-- empty image -->
             </div>
-            <div class="bgimg tropicals">
+            <!-- split -->
+            <div class="bgimg tropicals five">
                 <!-- empty image -->
             </div>
-            <div class="shoptxt">
+            <div class="shoptxt six">
                 <div>
                     <h3>Tropicals</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id magnam sed fugit, dolor ducimus, nisi accusantium perspiciatis molestiae earum quos adipisci omnis impedit similique labore, commodi mollitia? Nihil, quod. Facilis.</p>
